# react-native-box2d

./: .gitignore  .gitmodules  README.md  package.json  react-native-box2d.podspec  react-native-fast-crypto.podspec  tsconfig.json
android/: CMakeLists.txt  CMakeLists.txt.in  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/reactnativebox2d/: Box2dModule.java  Box2dPackage.java
cpp/: FastCryptoHostObject.cpp  JSIBox2dApi.h  JSIBox2dBody.h  JSIBox2dBodyDef.h  JSIBox2dCircleShape.h  JSIBox2dFixtureDef.h  JSIBox2dPolygonShape.h  JSIBox2dShape.h  JSIBox2dVec2.h  JSIBox2dWorld.h  utils.h
cpp/jsi/: JsiHostObject.cpp  JsiWrappingHostObjects.h
example/: app.json  index.tsx  package.json
example/android/: .project  build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativebox2d/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/example/reactnativefastcrypto/: MainActivity.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env  Podfile
example/ios/Box2DExample.xcworkspace/: contents.xcworkspacedata
example/ios/Box2dExample.xcodeproj/: project.pbxproj
example/ios/Box2dExample.xcodeproj/xcshareddata/xcschemes/: FastCryptoExample.xcscheme
example/ios/FastCryptoExample/: AppDelegate.m  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/src/: App.tsx  HomeScreen.tsx  SimpleRepo.tsx
example/src/examples/: SpawnBoxesScreen.tsx
example/src/examples/FlappyBird/: FlappyBirdScreen.tsx
example/src/examples/FlappyBird/components/: BaseActor.tsx  Bird.tsx
example/src/examples/FlappyBird/state/: config.ts  stage.ts
ios/: Box2dModule.h  Box2dModule.mm  FastCryptoModule.mm
scripts/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  android-build-n-copy-box2d.sh  copy-box2d.sh  ios-build-n-copy-box2d.sh
src/: Box2d.ts  index.ts  types.d.ts  types.ts
